--- a/Views/Projects/MyProjects.cshtml
+++ b/Views/Projects/MyProjects.cshtml
@@ -22,7 +22,7 @@
                     <a asp-action="Index" asp-controller="Home">Home</a>
                 </li>
                 <li class="breadcrumb-item">
-                    <a href="#">Projects</a>
+                    <a>Projects</a>
                 </li>
                 <li class="breadcrumb-item active" aria-current="page">My Projects</li>
             </ol>
