--- a/Views/Tickets/UnassignedTickets.cshtml
+++ b/Views/Tickets/UnassignedTickets.cshtml
@@ -22,7 +22,7 @@
                     <a asp-action="Index" asp-controller="Home">Home</a>
                 </li>
                 <li class="breadcrumb-item">
-                    <a href="#">Tickets</a>
+                    <a>Tickets</a>
                 </li>
                 <li class="breadcrumb-item active" aria-current="page">Unassigned Tickets</li>
             </ol>
@@ -46,6 +46,9 @@
                                 @Html.DisplayNameFor(model => model.Title)
                             </th>
                             <th>
+                                @Html.DisplayNameFor(model => model.Description)
+                            </th>
+                            <th>
                                 @Html.DisplayNameFor(model => model.Project)
                             </th>
                             <th>
@@ -57,6 +60,12 @@
                             <th>
                                 @Html.DisplayNameFor(model => model.TicketStatus)
                             </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.TicketPriority)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.TicketType)
+                            </th>
                             <th></th>
                         </tr>
                     </thead>
@@ -66,6 +75,9 @@
                             <tr>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Title)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Description)
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Project!.Name)
@@ -80,11 +92,13 @@
                                     @Html.DisplayFor(modelItem => item.TicketStatus!.Name)
                                 </td>
                                 <td>
-                                    @* Admin, submitter or developer of ticket can see Edit button *@
-                                    @if (User.IsInRole(nameof(BTRoles.Admin)) || (item.SubmitterUserId == btUser || item.DeveloperUserId == btUser))
-                                    {
-                                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-primary rounded-pill mx-2">Edit</a>
-                                    }
+                                    @Html.DisplayFor(modelItem => item.TicketPriority!.Name)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.TicketType!.Name)
+                                </td>
+                                <td>
+                                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-primary rounded-pill mx-2">Edit</a>
                                     <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-primary rounded-pill mx-2">Details</a>
                                     @* show Archive button if ticket is not archived *@
                                     @if (User.IsInRole(nameof(BTRoles.Admin)))
@@ -99,16 +113,9 @@
                                             <a asp-action="Restore" asp-route-id="@item.Id" class="btn btn-outline-success rounded-pill mx-2">Restore</a>
                                         }
                                     }
-                                    @if (item.DeveloperUserId is null && User.IsInRole(nameof(BTRoles.ProjectManager)))
+                                    @if (item.DeveloperUserId is null)
                                     {
                                         <a class="btn btn-outline-info rounded-pill mx-2" asp-action="AssignDeveloper" asp-route-id="@item.Id">Assign Developer</a>
-                                    }
-                                    else
-                                    {
-                                        @if (User.IsInRole(nameof(BTRoles.ProjectManager)))
-                                        {
-                                            <a class="btn btn-outline-secondary rounded-pill mx-2" asp-action="AssignDeveloper" asp-route-id="@item.Id">@(item.DeveloperUser?.FullName ?? "Unassigned")</a>
-                                        }
                                     }
                                 </td>
                             </tr>
