--- a/Views/Projects/Archive.cshtml
+++ b/Views/Projects/Archive.cshtml
@@ -37,7 +37,7 @@
 <div class="row">
     <div class="col-12 col-md-8 offset-md-2">
         <h2>Are you sure?</h2>
-        <p class="text-lead text-muted">This project will be archived. It will be moved to Archived Projects.</p>
+        <p class="text-lead text-muted">This project and all of its tickets will be archived. It will be moved to Archived Projects.</p>
         <div class="card mb-3">
             <div class="row g-0">
                 <div class="col-md-4 square-img-container">
