--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -38,11 +38,6 @@
     <link rel="stylesheet" href="/css/site.css" />
 </head>
 
-@*@{
-    string? controller = (string?)Context.GetRouteValue("controller");
-    string? action = (string?)Context.GetRouteValue("action");
-}*@
-
 <body>
 
     @*<div class="container-fluid overflow-hidden">
@@ -124,125 +119,7 @@
                             </li>
 
                             <!-- Notifications -->
-                            <li class="nav-item dropdown">
-                                <a href="#" class="nav-link nav-link-notify" title="Notifications" data-toggle="dropdown">
-                                    <i data-feather="bell"></i>
-                                </a>
-                                <div class="dropdown-menu dropdown-menu-right dropdown-menu-big">
-                                    <div class="border-bottom px-4 py-3 text-center d-flex justify-content-between align-items-center">
-                                        <h5 class="mb-0">Notifications</h5>
-                                        <small class="opacity-7">2   unread notifications</small>
-                                    </div>
-                                    <div class="dropdown-scroll">
-                                        <ul class="list-group list-group-flush">
-                                            <li class="px-4 py-2 text-center small text-muted bg-light">Today</li>
-                                            <li class="px-4 py-3 list-group-item">
-                                                <a href="#" class="d-flex align-items-center hide-show-toggler">
-                                                    <div class="flex-shrink-0">
-                                                        <figure class="avatar mr-3">
-                                                            <span class="avatar-title bg-info-bright text-info rounded-circle">
-                                                                <i class="ti-lock"></i>
-                                                            </span>
-                                                        </figure>
-                                                    </div>
-                                                    <div class="flex-grow-1">
-                                                        <p class="mb-0 line-height-20 d-flex justify-content-between">
-                                                            2 steps verification
-                                                            <i title="Mark as read" data-toggle="tooltip"
-                                                               class="hide-show-toggler-item fa fa-circle-o font-size-11"></i>
-                                                        </p>
-                                                        <span class="text-muted small">20 min ago</span>
-                                                    </div>
-                                                </a>
-                                            </li>
-                                            <li class="px-4 py-3 list-group-item">
-                                                <a href="#" class="d-flex align-items-center hide-show-toggler">
-                                                    <div class="flex-shrink-0">
-                                                        <figure class="avatar mr-3">
-                                                            <span class="avatar-title bg-warning-bright text-warning rounded-circle">
-                                                                <i class="ti-server"></i>
-                                                            </span>
-                                                        </figure>
-                                                    </div>
-                                                    <div class="flex-grow-1">
-                                                        <p class="mb-0 line-height-20 d-flex justify-content-between">
-                                                            Storage is running low!
-                                                            <i title="Mark as read" data-toggle="tooltip"
-                                                               class="hide-show-toggler-item fa fa-circle-o font-size-11"></i>
-                                                        </p>
-                                                        <span class="text-muted small">45 sec ago</span>
-                                                    </div>
-                                                </a>
-                                            </li>
-                                            <li class="px-4 py-2 text-center small text-muted bg-light">Old Notifications</li>
-                                            <li class="px-4 py-3 list-group-item">
-                                                <a href="#" class="d-flex align-items-center hide-show-toggler">
-                                                    <div class="flex-shrink-0">
-                                                        <figure class="avatar mr-3">
-                                                            <span class="avatar-title bg-secondary-bright text-secondary rounded-circle">
-                                                                <i class="ti-file"></i>
-                                                            </span>
-                                                        </figure>
-                                                    </div>
-                                                    <div class="flex-grow-1">
-                                                        <p class="mb-0 line-height-20 d-flex justify-content-between">
-                                                            1 person sent a file
-                                                            <i title="Mark as unread" data-toggle="tooltip"
-                                                               class="hide-show-toggler-item fa fa-check font-size-11"></i>
-                                                        </p>
-                                                        <span class="text-muted small">Yesterday</span>
-                                                    </div>
-                                                </a>
-                                            </li>
-                                            <li class="px-4 py-3 list-group-item">
-                                                <a href="#" class="d-flex align-items-center hide-show-toggler">
-                                                    <div class="flex-shrink-0">
-                                                        <figure class="avatar mr-3">
-                                                            <span class="avatar-title bg-success-bright text-success rounded-circle">
-                                                                <i class="ti-download"></i>
-                                                            </span>
-                                                        </figure>
-                                                    </div>
-                                                    <div class="flex-grow-1">
-                                                        <p class="mb-0 line-height-20 d-flex justify-content-between">
-                                                            Reports ready to download
-                                                            <i title="Mark as unread" data-toggle="tooltip"
-                                                               class="hide-show-toggler-item fa fa-check font-size-11"></i>
-                                                        </p>
-                                                        <span class="text-muted small">Yesterday</span>
-                                                    </div>
-                                                </a>
-                                            </li>
-                                            <li class="px-4 py-3 list-group-item">
-                                                <a href="#" class="d-flex align-items-center hide-show-toggler">
-                                                    <div class="flex-shrink-0">
-                                                        <figure class="avatar mr-3">
-                                                            <span class="avatar-title bg-primary-bright text-primary rounded-circle">
-                                                                <i class="ti-arrow-top-right"></i>
-                                                            </span>
-                                                        </figure>
-                                                    </div>
-                                                    <div class="flex-grow-1">
-                                                        <p class="mb-0 line-height-20 d-flex justify-content-between">
-                                                            The invitation has been sent.
-                                                            <i title="Mark as unread" data-toggle="tooltip"
-                                                               class="hide-show-toggler-item fa fa-check font-size-11"></i>
-                                                        </p>
-                                                        <span class="text-muted small">Last Week</span>
-                                                    </div>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <div class="px-4 py-3 text-right border-top">
-                                        <ul class="list-inline small">
-                                            <li class="list-inline-item mb-0">
-                                                <a href="#">Mark All Read</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </li>
+                            <partial name="_Notifications" />
 
                             <partial name="_LoginPartial" />
                         </ul>
@@ -314,6 +191,13 @@
 
     <!-- Javascript -->
     <script src="~/vendors/ckeditor5/ckeditor.js"></script>
+
+    <!-- ChartJS -->
+    <script src="~/vendors/charts/chartjs/chart.min.js"></script>
+    <script src="~/assets/js/examples/charts/chartjs.js"></script>
+
+    <!--Google Charts -->
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 
     <!-- ------------------- Gogi scripts end ----------------------------- -->
     <!-- Sweet Alerts -->
