--- a/Views/Tickets/AssignDeveloper.cshtml
+++ b/Views/Tickets/AssignDeveloper.cshtml
@@ -20,6 +20,10 @@
                 <input type="hidden" asp-for="Ticket!.Id" />
                 <select asp-items="Model.DevList" asp-for="DevId">
                 </select>
+                <div class="form-group">
+                    <label asp-for="Ticket!.TicketStatusId" class="control-label">Status</label>
+                    <select asp-for="Ticket!.TicketStatusId" class="form-control" disabled asp-items="ViewBag.TicketStatusId"></select>
+                </div>
                 <div class="d-flex justify-content-center">
                     <button type="submit" class="btn btn-outline-primary rounded-pill my-2">Save</button>
                 </div>
